==> ARMmbed/mbed-os/targets/TARGET_MICROCHIP/TARGET_PIC32CX/serial_api.c <==
#include "device.h"
#include "clocking.h"
#include "mbed_assert.h"
#include "mbed_power_mgmt.h"
#include "serial_api.h"
#include <string.h>
#include <stdbool.h>
#include "pinmap.h"
#include "PeripheralPins.h"
#include "PeripheralNames.h"
#include "compiler.h"
#include "pic32cx.h"
#include "usart.h"
#include "uart_serial.h"
#define UART_COUNT    1
#define USART_COUNT   8
#define MODULES_SIZE_SERIAL (UART_COUNT + USART_COUNT)
#define UART_Handler               UART_Handler
#define USART0_Handler             FLEXCOM0_Handler
#define USART1_Handler             FLEXCOM1_Handler
#define USART2_Handler             FLEXCOM2_Handler
#define USART3_Handler             FLEXCOM3_Handler
#define USART4_Handler             FLEXCOM4_Handler
#define USART5_Handler             FLEXCOM5_Handler
#define USART6_Handler             FLEXCOM6_Handler
#define USART7_Handler             FLEXCOM7_Handler

void serial_init(serial_t *obj, PinName tx, PinName rx)
{
    /* Get UART object connected to the given pins */
    UARTName uart_tx = (UARTName) pinmap_peripheral(tx, PinMap_UART_TX);
    UARTName uart_rx = (UARTName) pinmap_peripheral(rx, PinMap_UART_RX);
    /* Check that pins are connected to same UART */
    UARTName uart = (UARTName) pinmap_merge(uart_tx, uart_rx);
    MBED_ASSERT((unsigned int) uart != NC);
    
    /* Set Pin Mode */
    ioport_mode_t mode = (ioport_mode_t)pinmap_function(tx, PinMap_UART_TX);
    ioport_set_pin_mode(tx, mode);
    mode = (ioport_mode_t)pinmap_function(rx, PinMap_UART_RX);
    ioport_set_pin_mode(rx, mode);

	/* Set default values */
	obj->p_usart = (Usart *) uart;
	obj->serial_options.charlength = US_MR_CHRL_8_BIT;
	obj->serial_options.paritytype = US_MR_PAR_NO;
	obj->serial_options.stopbits = US_MR_NBSTOP_1_BIT;
	obj->serial_options.baudrate  = 115200;

    if (uart == STDIO_UART) {
#if MBED_CONF_PLATFORM_STDIO_BAUD_RATE
        obj->serial_options.baudrate  = MBED_CONF_PLATFORM_STDIO_BAUD_RATE; // baudrate takes value from platform/mbed_lib.json
#endif /* MBED_CONF_PLATFORM_STDIO_BAUD_RATE */
    } else {
#if MBED_CONF_PLATFORM_DEFAULT_SERIAL_BAUD_RATE
        obj->serial_options.baudrate  = MBED_CONF_PLATFORM_DEFAULT_SERIAL_BAUD_RATE; // baudrate takes value from platform/mbed_lib.json
#endif /* MBED_CONF_PLATFORM_DEFAULT_SERIAL_BAUD_RATE */
    }

	/* Check if UART or USART */
	if (UART == (Uart *)obj->p_usart) {
		obj->is_usart = false;
	} else {
		/* Flexcomm USART */
		if ((USART0 == (Usart *)obj->p_usart) || (USART1 == (Usart *)obj->p_usart) ||
				(USART2 == (Usart *)obj->p_usart) || (USART3 == (Usart *)obj->p_usart) ||
				(USART4 == (Usart *)obj->p_usart) || (USART5 == (Usart *)obj->p_usart) ||
				(USART6 == (Usart *)obj->p_usart) || (USART7 == (Usart *)obj->p_usart)) {
			obj->is_usart = true;
		}
	}

	/* If this is the UART to be used for stdio, copy it to the stdio_uart struct */
	if (uart == STDIO_UART) {
	    stdio_uart_inited = 1;
	    memcpy(&stdio_uart, obj, sizeof(serial_t));
	}

	/* Configure serial mode */
	usart_serial_init((usart_if)obj->p_usart, &obj->serial_options);

	/* Disable all the interrupts */
	if (obj->is_usart) {
		usart_disable_interrupt(obj->p_usart, 0xFFFFFFFF);
	} else {
		uart_disable_interrupt((Uart *)obj->p_usart, 0xFFFFFFFF);
	}

	/* Configure and enable interrupt of U(S)ART */
	NVIC_EnableIRQ(_serial_get_irq_index(obj));
}

void serial_free(serial_t *obj)
{
	/* Disable the receiver and transmitter */
	if (obj->is_usart) {
		usart_disable_tx(obj->p_usart);
		usart_disable_rx(obj->p_usart);
	} else {
		uart_disable_tx((Uart *)obj->p_usart);
		uart_disable_rx((Uart *)obj->p_usart);
	}
}

void serial_baud(serial_t *obj, int baudrate)
{
	/* Only in Flexcomm USART */
	if (obj->is_usart) {
		usart_set_async_baudrate(obj->p_usart, (uint32_t)baudrate, sysclk_get_peripheral_bus_hz(obj->p_usart));
		obj->serial_options.baudrate = baudrate;
	}
}

void serial_format(serial_t *obj, int data_bits, SerialParity parity, int stop_bits)
{
	/* Disable the receiver and transmitter */
	_serial_enable(obj, false);
		
	/* We support 5 to 8 data bits */
    MBED_ASSERT(data_bits >= 5 && data_bits <= 8);
	
	/* Set new values */
	obj->serial_options.charlength = (data_bits - 5) << 6;
	obj->serial_options.paritytype = US_MR_PAR_NO;
	obj->serial_options.stopbits = (stop_bits - 1) << 9;
	switch (parity) {
    case ParityNone:
		obj->serial_options.paritytype = US_MR_PAR_NO;
		break;
    case ParityOdd:
		obj->serial_options.paritytype = US_MR_PAR_ODD;
		break;
    case ParityEven:
		obj->serial_options.paritytype = US_MR_PAR_EVEN;
		break;
    case ParityForced1:
		obj->serial_options.paritytype = US_MR_PAR_MARK;
		break;
    case ParityForced0:
		obj->serial_options.paritytype = US_MR_PAR_SPACE;
		break;
	}

	/* Configure USART in serial mode */
	usart_serial_init((usart_if)obj->p_usart, &obj->serial_options);
}

void serial_irq_handler(serial_t *obj, uart_irq_handler handler, uint32_t id)
{
    irq_handler = handler;
    serial_irq_ids[_serial_get_index(obj)] = id;
}

void serial_irq_set(serial_t *obj, SerialIrq irq, uint32_t enable)
{
	/* Enable or disable interrupt */
	if (enable) {
		if (irq == RxIrq) { /* RX */
			if (!obj->is_usart) {
				uart_enable_interrupt((Uart *)obj->p_usart, UART_IER_RXRDY);
			} else { /* Flexcomm USART */
				usart_enable_interrupt(obj->p_usart, US_IER_RXRDY);
			}
		} else { /* TX */
			if (!obj->is_usart) {
				uart_enable_interrupt((Uart *)obj->p_usart, UART_IER_TXRDY);
			} else { /* Flexcomm USART */
				usart_enable_interrupt(obj->p_usart, US_IER_TXRDY);
			}
		}
		
		NVIC_ClearPendingIRQ(_serial_get_irq_index(obj));
		NVIC_SetPriority(_serial_get_irq_index(obj), 1);
		NVIC_EnableIRQ(_serial_get_irq_index(obj));
	} else { /* Disable */
		if (irq == RxIrq) { /* RX */
			if (!obj->is_usart) {
				uart_disable_interrupt((Uart *)obj->p_usart, UART_IDR_RXRDY);
			} else { /* Flexcomm USART */
				usart_disable_interrupt(obj->p_usart, US_IDR_RXRDY);
			}
		} else { /* TX */
			if (!obj->is_usart) {
				uart_disable_interrupt((Uart *)obj->p_usart, UART_IDR_TXRDY);
			} else { /* Flexcomm USART */
				usart_disable_interrupt(obj->p_usart, US_IDR_TXRDY);
			}
		}

		NVIC_DisableIRQ(_serial_get_irq_index(obj));
	}
}

int serial_getc(serial_t *obj)
{
	uint8_t data;
	usart_serial_getchar((usart_if)obj->p_usart, &data);
	return data;
}

void serial_putc(serial_t *obj, int c)
{
	usart_serial_putchar((usart_if)obj->p_usart, (uint8_t)c);
}

int serial_readable(serial_t *obj)
{
	return usart_serial_is_rx_ready((usart_if)obj->p_usart);
}

int serial_writable(serial_t *obj)
{
	return usart_serial_is_tx_ready((usart_if)obj->p_usart);
}

void serial_break_set(serial_t *obj)
{
	/* Only in Flexcomm USART */
	if (obj->is_usart) {
		usart_start_tx_break((usart_if)obj->p_usart);
	}
}

void serial_break_clear(serial_t *obj)
{
	/* Only in Flexcomm USART */
	if (obj->is_usart) {
		usart_stop_tx_break((usart_if)obj->p_usart);
	}
}
